# draw-and-guess-haskell

./: .gitignore  index.html  notes.txt  thoughts.txt
client/: general.css  index.html
client/original_tinydoodle/: index.html
client/static/css/: general.css
client/static/js/: doodle.js
docs/: thoughts.txt
server/: DrawAndGuessServer.hs  Messages.hs  Teams.hs  Types.hs  draw-and-guess-haskell.cabal  guesswords.txt
