Build-type:     Simple
Name:           draw-and-guess-haskell
Version:        0.0.2
Synopsis:       Server for a multiplayer websockets-based draw-and-guess game.
Description:    Uses the websockets package to run a multi-player game of 
                "draw-and-guess" wherein some players draw pictures and others 
                guess what is being drawn.
                A sample html+js client for the game can be found at the project 
                homepage.  This is a newbie haskell project and contains many 
                bad and stupid practices.
Homepage:       https://github.com/nbogie/draw-and-guess-haskell
Category:       Game
License:        GPL-3
License-file:   COPYING
Author:         <neillbogie+software@gmail.com>
Maintainer:     <neillbogie+software@gmail.com>
Copyright:      Neill Bogie 2011
Stability:      experimental
Tested-with:    GHC ==6.12
Cabal-Version:  >= 1.4
Executable:     DrawAndGuessServer
Main-Is:        DrawAndGuessServer.hs
Build-depends:
    tagsoup == 0.12
  , websockets == 0.3.0.0
  , json == 0.4.4
  , base == 4.2.0.0
  , containers == 0.3.0.0
  , utf8-string == 0.3.6
  , bytestring == 0.9.1.7
  , network == 2.3.0.2
GHC-Options:    -O2
